# Agentix

./: .dockerignore  ARCHITECTURE.md  CLAUDE.md  README.md  ROADMAP.md  default.nix  mkdocs.yml  pyproject.toml
agentix/: __init__.py  ctx.py  dispatch.py  eval.py  idents.py  models.py  namespace.py  registry.py  trace.py  trajectory.py  validate.py  wire.py
docs/: DEPLOY.md  DEVELOPMENT.md  agent-protocol.md  architecture-review.md  architecture.md  axes.mdx  closure-protocol.md  deployment.mdx  development.mdx  docs.json  extend-runtime.mdx  index.mdx  integrate-agent.mdx  integrate-dataset.mdx  namespace.mdx  plugin-authors.mdx  plugin-system-research.md  quick-start.md  quickstart.mdx  refactoring-plan.md
primitives/bash/: Dockerfile  default.nix  manifest.json  pyproject.toml
primitives/bash/agentix_closures/bash/: __init__.py  _impl.py  _register.py
primitives/bash/src/agentix/bash/: __init__.py
primitives/bash/src/agentix/primitive/bash/: __init__.py
tests/: _concurrent_target.py  _namespace_target.py  _rpc_helpers.py  _trace_target.py  _user_app_target.py  _worker_target.py  conftest.py  smoke_docker.py  test_build.py  test_build_e2e.py  test_closure_protocol.py  test_concurrent_remote.py  test_cross_process_trace.py  test_ctx.py  test_eval.py  test_executor.py  test_models.py  test_namespace.py  test_namespace_protocol.py  test_namespace_roundtrip.py  test_plugin_registry.py  test_pubsub_pattern_demo.py  (+6 more)
tests/closures/mock-agent/: default.nix  pyproject.toml
tests/closures/mock-agent/mock_agent/: __main__.py  app.py
tests/closures/mock-dataset/: default.nix  pyproject.toml
tests/closures/mock-dataset/mock_dataset/: __main__.py  app.py
(+102 files in other folders)
