[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentix-bash"
version = "0.1.0"
description = "Bash command execution primitive for Agentix"
requires-python = ">=3.11"
dependencies = []

# Entry-point value points at the package; the framework walks
# `agentix.bash`'s top-level attributes for async callables on first
# dispatch. No class wrapper, no `:attr` suffix.
[project.entry-points."agentix.namespace"]
bash = "agentix.bash"

[tool.hatch.build.targets.wheel]
# Package the `agentix.bash` namespace contribution. `src/agentix/` has
# no __init__.py (PEP 420 namespace package); hatchling walks the tree
# and installs files at `agentix/bash/` in the wheel.
packages = ["src/agentix"]
