[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mock-agent"
version = "0.1.0"
description = "Mock agent closure used in Agentix tests"
requires-python = ">=3.11"
dependencies = ["fastapi", "uvicorn"]

[project.scripts]
start = "mock_agent.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["mock_agent"]
